--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"autoload"         : {
 		"psr-4": {
-			"semfox\\": "src/semfox/"
+			"SEMFOX\\": "src/SEMFOX/"
 		}
 	},
 	"name"             : "wblkonzept/sfapi",
