+ comments + default constants + new version in composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 		}
 	},
 	"name"             : "wblkonzept/sfapi",
-	"version"          : "0.0.4-dev",
-	"description"      : "API wrapper for semfox",
+	"version"          : "0.0.5-dev",
+	"description"      : "API wrapper for SEMFOX",
 	"license"          : "GPL v3",
 	"authors"          : [
 		{
@@ -14,6 +14,6 @@
 			"email": "code@wbl-konzept.de"
 		}
 	],
-	"minimum-stability": "stable",
+	"minimum-stability": "beta",
 	"require"          : {}
 }
