--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		}
 	},
 	"name"             : "wblkonzept/sfapi",
-	"version"          : "1.0.1",
+	"version"          : "1.0.2",
 	"description"      : "API wrapper for SEMFOX",
 	"license"          : "GPL v3",
 	"authors"          : [
@@ -15,5 +15,7 @@
 		}
 	],
 	"minimum-stability": "stable",
-	"require"          : {}
+	"require"          : {
+		"php": ">=5.3.0"
+	}
 }
